--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -14,5 +14,5 @@ jobs:
       env:
         SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
       run: |
-        echo $PLAY_FILE > ./app/serviceAccount.json
+        echo $SERVICE_ACCOUNT > ./app/serviceAccount.json
         find . -name serviceAccount.json
