--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -8,11 +8,14 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
-    - name: Get JSON file
-      env:
-        SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
+    - name: Write GCP service account key to file
       run: |
-        echo $SERVICE_ACCOUNT > ./app/serviceAccount.json
-        find . -name serviceAccount.json
+        echo "${{ secrets.SERVICE_ACCOUNT }}" > serviceAccount.json
+        chmod 600 serviceAccount.json
+      # Make sure your secret is valid JSON; no extra quotes or escaping.
+
+    - name: Verify file contents
+      run: |
+        head -n5 serviceAccount.json
