--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Authlib==1.5.2
-firebase-admin==6.8.0
+boto3==1.38.25
 google-auth==2.39.0
 google-cloud-firestore==2.20.2
 google-cloud-storage==3.1.0
